--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,14 @@
-# Windows thumbnail cache files
-Thumbs.db
-ehthumbs.db
-ehthumbs_vista.db
+node_modules
+dist
 
-# macOS
-.DS_Store
+# local env files
+.env.local
+.env.*.local
 
-# Folder config file
-Desktop.ini
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# Logs
-logs
-*.log
-
-# =========================
-# Operating System Files
-# =========================
-
-*.zip
-*.sql
-
-
-#varias
-node_modules/
+# Editor directories and files
+.vscode
